--- a/src/main/java/fxml/Facturacion/Envios/Envios.fxml
+++ b/src/main/java/fxml/Facturacion/Envios/Envios.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
@@ -89,7 +90,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Spinner fx:id="cantProd" layoutX="102.0" layoutY="3.0" prefHeight="25.0" prefWidth="58.0" />
+                        <Spinner fx:id="cantidad_producto" layoutX="102.0" layoutY="3.0" prefHeight="25.0" prefWidth="58.0" />
                         <Label layoutX="195.0" layoutY="6.0" text="Producto:">
                            <font>
                               <Font size="14.0" />
@@ -132,11 +133,11 @@
                   </TitledPane>
                </children>
             </AnchorPane>
-            <TitledPane animated="false" collapsible="false" layoutX="1.0" layoutY="61.0" prefHeight="126.0" prefWidth="727.0" text="Información General">
+            <TitledPane animated="false" collapsible="false" layoutX="1.0" layoutY="61.0" prefHeight="162.0" prefWidth="727.0" text="Información General">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="171.0" prefWidth="712.0">
                      <children>
-                        <AnchorPane fx:id="pedidoForm" prefHeight="99.0" prefWidth="727.0">
+                        <AnchorPane fx:id="pedidoForm" prefHeight="138.0" prefWidth="727.0">
                            <children>
                               <Label layoutX="14.0" layoutY="14.0" text="Cliente:">
                                  <font>
@@ -149,13 +150,19 @@
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="dni_cliente" layoutX="156.0" layoutY="48.0" prefHeight="25.0" prefWidth="134.0" />
+                              <TextField fx:id="dni_cliente" layoutX="156.0" layoutY="48.0" prefHeight="25.0" prefWidth="149.0" />
                               <Label fx:id="VerDocumentoLabel1" layoutX="342.0" layoutY="51.0" text="RUC">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
                               <TextField fx:id="ruc_cliente" layoutX="449.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
+                              <Label fx:id="VerDocumentoLabel2" layoutX="14.0" layoutY="87.0" text="Codigo Pedido">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox layoutX="156.0" layoutY="85.0" prefWidth="150.0" />
                            </children>
                         </AnchorPane>
                      </children>
