--- a/src/main/java/fxml/Ventas/Fletes/Fletes.fxml
+++ b/src/main/java/fxml/Ventas/Fletes/Fletes.fxml
@@ -109,7 +109,7 @@
                                  </font>
                               </Label>
                               <ComboBox fx:id="VerTipo" layoutX="183.0" layoutY="78.0" prefHeight="25.0" prefWidth="160.0" />
-                              <Label layoutX="382.0" layoutY="81.0" text="Moneda:">
+                              <Label fx:id="MonedaLabel" layoutX="382.0" layoutY="81.0" text="Moneda:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
