--- a/src/main/java/fxml/Ventas/Pedidos/Pedidos.fxml
+++ b/src/main/java/fxml/Ventas/Pedidos/Pedidos.fxml
@@ -108,7 +108,7 @@
                            </font>
                         </Label>
                         <TextField fx:id="VerProducto" layoutX="280.0" layoutY="5.0" prefHeight="25.0" prefWidth="240.0" />
-                        <Button fx:id="buscarProducto" layoutX="529.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleAgregarProducto" prefHeight="20.0" prefWidth="20.0" text="+">
+                        <Button fx:id="buscarProducto" layoutX="529.0" layoutY="6.0" mnemonicParsing="false" onAction="#buscarProducto" prefHeight="20.0" prefWidth="20.0" text="+">
                            <font>
                               <Font size="10.0" />
                            </font>
@@ -201,8 +201,8 @@
                               </Label>
                               <TextField fx:id="VerDocumento" layoutX="351.0" layoutY="13.0" prefHeight="25.0" prefWidth="134.0" />
                               <DatePicker fx:id="VerFecha" layoutX="582.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
-                              <TextField fx:id="VerDireccionFacturacion" layoutX="123.0" layoutY="90.0" prefHeight="25.0" prefWidth="564.0" />
-                              <TextField fx:id="VerDireccionDespacho" layoutX="123.0" layoutY="124.0" prefHeight="25.0" prefWidth="564.0" />
+                              <TextField fx:id="VerDireccionFacturacion" editable="false" layoutX="123.0" layoutY="90.0" prefHeight="25.0" prefWidth="564.0" />
+                              <TextField fx:id="VerDireccionDespacho" editable="false" layoutX="123.0" layoutY="124.0" prefHeight="25.0" prefWidth="564.0" />
                               <ComboBox fx:id="VerMoneda" layoutX="351.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
                               <Label layoutX="508.0" layoutY="16.0" text="Vendedor:">
                                  <font>
