--- a/src/main/java/fxml/Ventas/Proveedores/ProveedoresBotones.fxml
+++ b/src/main/java/fxml/Ventas/Proveedores/ProveedoresBotones.fxml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
+<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="368.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
    <children>
-      <Button contentDisplay="TOP" layoutX="14.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Nuevo">
+      <Button contentDisplay="TOP" layoutX="4.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Nuevo">
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -19,7 +15,7 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <Button contentDisplay="TOP" layoutX="218.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Desactivar">
+      <Button contentDisplay="TOP" layoutX="186.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Desactivar">
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -27,7 +23,7 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <Button contentDisplay="TOP" layoutX="116.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Guardar">
+      <Button contentDisplay="TOP" layoutX="95.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Guardar">
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -35,5 +31,14 @@
                </image>
             </ImageView>
          </graphic></Button>
+      <Button contentDisplay="TOP" layoutX="277.0" layoutY="11.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Cargar">
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Imagenes/delete_icon.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
