--- a/src/main/java/fxml/Materiales/OrdenesDeEntrada/OrdenesDeEntradaBotones.fxml
+++ b/src/main/java/fxml/Materiales/OrdenesDeEntrada/OrdenesDeEntradaBotones.fxml
@@ -19,11 +19,11 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <Button contentDisplay="TOP" layoutX="218.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Desactivar">
+      <Button contentDisplay="TOP" layoutX="218.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Completar">
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../Imagenes/delete_icon.png" />
+                  <Image url="@../../Imagenes/clipboard-verification-symbol.png" />
                </image>
             </ImageView>
          </graphic></Button>
