--- a/src/main/java/fxml/Materiales/Productos/Productos.fxml
+++ b/src/main/java/fxml/Materiales/Productos/Productos.fxml
@@ -325,20 +325,25 @@
                                            <Font size="20.0" />
                                         </font>
                                      </Label>
-                                     <TableView layoutX="31.0" layoutY="94.0" prefHeight="289.0" prefWidth="423.0">
+                                     <TableView fx:id="TablaProductosUnicos" layoutX="31.0" layoutY="69.0" prefHeight="391.0" prefWidth="511.0">
                                        <columns>
-                                         <TableColumn prefWidth="151.0" text="Código de producto" />
-                                         <TableColumn prefWidth="271.0" text="Ubicación" />
+                                         <TableColumn fx:id="ColumnaCodigoUnicos" prefWidth="101.0" text="Código" />
+                                         <TableColumn fx:id="ColumnaEntradaUnicos" prefWidth="142.0" text="Cod Ord. Entrada" />
+                                          <TableColumn fx:id="ColumnaIngresoUnicos" prefWidth="112.0" text="Fecha Ingreso" />
+                                          <TableColumn fx:id="ColumnaUbicacionUnicos" prefWidth="154.0" text="Ubicacion" />
                                        </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
                                      </TableView>
-                                     <TitledPane animated="false" collapsible="false" layoutX="517.0" layoutY="94.0" prefHeight="289.0" prefWidth="177.0" text="Acciones">
+                                     <TitledPane animated="false" collapsible="false" layoutX="571.0" layoutY="94.0" prefHeight="289.0" prefWidth="153.0" text="Acciones">
                                         <content>
-                                           <AnchorPane prefHeight="239.0" prefWidth="175.0">
+                                           <AnchorPane prefHeight="263.0" prefWidth="150.0">
                                               <children>
-                                                 <Button layoutX="68.0" layoutY="47.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="47.0" />
-                                                 <Button layoutX="68.0" layoutY="161.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
-                                                 <Label layoutX="67.0" layoutY="115.0" text="Ingresar" />
-                                                 <Label layoutX="61.0" layoutY="220.0" text="Movimiento" />
+                                                 <Button layoutX="56.0" layoutY="58.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="58.0" />
+                                                 <Button layoutX="56.0" layoutY="159.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                                                 <Label layoutX="55.0" layoutY="115.0" text="Ingresar" />
+                                                 <Label layoutX="44.0" layoutY="214.0" text="Movimiento" />
                                               </children>
                                            </AnchorPane>
                                         </content>
@@ -360,18 +365,18 @@
                                                        <Font size="14.0" />
                                                     </font>
                                                  </Label>
-                                                 <Label layoutX="116.0" layoutY="90.0" text="Disponible para la venta">
+                                                 <Label layoutX="116.0" layoutY="90.0" text="Stock Logico:">
                                                     <font>
                                                        <Font size="14.0" />
                                                     </font>
                                                  </Label>
-                                                 <Label layoutX="403.0" layoutY="93.0" text="Disponible para escoger">
+                                                 <Label layoutX="403.0" layoutY="93.0" text="Stock Fisico:">
                                                     <font>
                                                        <Font size="14.0" />
                                                     </font>
                                                  </Label>
-                                                 <Label fx:id="VerStockFisico" layoutX="291.0" layoutY="92.0" text="0" />
-                                                 <Label fx:id="VerStockLogico" layoutX="583.0" layoutY="95.0" text="0" />
+                                                 <Label fx:id="VerStockFisico" layoutX="562.0" layoutY="95.0" text="0" />
+                                                 <Label fx:id="VerStockLogico" layoutX="274.0" layoutY="92.0" text="0" />
                                                  <Line endX="100.0" layoutX="205.0" layoutY="121.0" startX="-100.0" />
                                                  <Line endX="100.0" layoutX="485.0" layoutY="121.0" startX="-100.0" />
                                              </children>
