--- a/src/main/java/fxml/AgregarProductosEnvios.fxml
+++ b/src/main/java/fxml/AgregarProductosEnvios.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="369.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="369.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView fx:id="tabla_productos" layoutX="24.0" layoutY="167.0" prefHeight="183.0" prefWidth="496.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="167.0">
          <columns>
@@ -50,7 +50,7 @@
             <Line endX="400.0" layoutX="100.0" layoutY="29.0" startX="-100.0" />
          </children>
       </AnchorPane>
-      <Button fx:id="buscarProductoButtom" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+      <Button fx:id="buscarProductoButtom" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" onAction="#buscar_producto" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
       <Button fx:id="boton_agregar_producto" layoutX="458.0" layoutY="360.0" mnemonicParsing="false" onAction="#agregarProducto" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
    </children>
 </AnchorPane>
