--- a/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
+++ b/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
@@ -198,14 +198,16 @@
                      <content>
                         <AnchorPane>
                            <children>
-                              <TitledPane fx:id="create_racks_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="24.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Racks">
+                              <TitledPane fx:id="create_racks_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="24.0" prefHeight="161.0" prefWidth="291.0" text="Creacion de Racks">
                                  <content>
                                     <AnchorPane>
                                        <children>
                                           <Label layoutX="14.0" layoutY="19.0" text="Altura:" />
                                           <TextField fx:id="rack_altura_field" layoutX="88.0" layoutY="14.0" prefHeight="27.0" prefWidth="179.0" />
-                                          <Button layoutX="168.0" layoutY="61.0" mnemonicParsing="false" onAction="#crearRack" text="Guardar" />
-                                          <Button layoutX="65.0" layoutY="61.0" mnemonicParsing="false" onAction="#cancelarCreacionRack" text="Cancelar" />
+                                          <Button layoutX="162.0" layoutY="94.0" mnemonicParsing="false" onAction="#crearRack" text="Guardar" />
+                                          <Button layoutX="59.0" layoutY="94.0" mnemonicParsing="false" onAction="#cancelarCreacionRack" text="Cancelar" />
+                                          <Label layoutX="14.0" layoutY="58.0" text="Capacidad:" />
+                                          <TextField fx:id="rack_capacidad_field" layoutX="88.0" layoutY="53.0" prefHeight="27.0" prefWidth="179.0" />
                                        </children>
                                     </AnchorPane>
                                  </content>
@@ -215,7 +217,7 @@
                                     <AnchorPane fx:id="pane_grilla" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: lightblue;" />
                                  </content>
                               </TitledPane>
-                              <TitledPane fx:id="create_almacen_logico_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="175.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Almacenes">
+                              <TitledPane fx:id="create_almacen_logico_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="208.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Almacenes">
                                  <content>
                                     <AnchorPane>
                                        <children>
