--- a/src/main/java/fxml/Facturacion/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Facturacion/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -14,18 +13,18 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.EnviosController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
    <children>
       <AnchorPane layoutX="4.0" layoutY="6.0" prefHeight="572.0" prefWidth="250.0">
          <children>
-            <TextField fx:id="envio_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
-            <Button layoutX="136.0" layoutY="178.0" mnemonicParsing="false" onAction="#buscar_envio" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
+            <TextField fx:id="salida_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
+            <Button layoutX="136.0" layoutY="178.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
             <TableView fx:id="tabla_envios" layoutX="13.0" layoutY="219.0" prefHeight="301.0" prefWidth="226.0">
                <columns>
-                  <TableColumn fx:id="columna_cliente" prefWidth="81.0" text="Cliente" />
-                  <TableColumn fx:id="columna_envio" prefWidth="69.0" text="Cod.Envio" />
-                  <TableColumn fx:id="columna_pedido" prefWidth="75.0" text="Cod.Pedido" />
+                  <TableColumn fx:id="columna_cliente" prefWidth="65.0" text="Cliente" />
+                  <TableColumn fx:id="columna_envio" prefWidth="93.0" text="Orden Salilda" />
+                  <TableColumn fx:id="columna_pedido" prefWidth="67.0" text="Pedido" />
                </columns>
             </TableView>
             <TextField fx:id="cliente_buscar" layoutX="119.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
@@ -34,7 +33,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="20.0" layoutY="70.0" prefHeight="21.0" prefWidth="125.0" text="Cod. Envio">
+            <Label layoutX="20.0" layoutY="70.0" prefHeight="21.0" prefWidth="125.0" text="Ordenes Salida">
                <font>
                   <Font size="14.0" />
                </font>
@@ -90,7 +89,6 @@
                         <TableColumn fx:id="cantProdColumn" prefWidth="51.0" text="Cantidad" />
                      </columns>
                      <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
                   <TitledPane animated="false" collapsible="false" layoutX="564.0" layoutY="50.0" minHeight="-Infinity" prefHeight="246.0" prefWidth="163.0" text="Acciones" AnchorPane.bottomAnchor="5.0">
@@ -111,27 +109,17 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="735.0">
                      <children>
-                        <Label layoutX="22.0" layoutY="14.0" text="Cliente">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <TextField layoutX="81.0" layoutY="10.0" prefHeight="25.0" prefWidth="226.0" />
-                        <ComboBox layoutX="381.0" layoutY="10.0" prefHeight="25.0" prefWidth="172.0" />
-                        <Label layoutX="324.0" layoutY="15.0" text="Pedido">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
                         <TableView layoutX="14.0" layoutY="65.0" prefHeight="147.0" prefWidth="539.0">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="C1" />
-                            <TableColumn prefWidth="75.0" text="C2" />
+                            <TableColumn fx:id="envio_cod_producto" prefWidth="132.0" text="Código" />
+                            <TableColumn fx:id="envio_nombre_producto" minWidth="0.0" prefWidth="135.0" text="Nombre" />
+                              <TableColumn fx:id="envio_desc_producto" minWidth="0.0" prefWidth="136.0" text="Descripcion" />
+                              <TableColumn fx:id="envio_cant_producto" prefWidth="135.0" text="Cantidad" />
                           </columns>
                         </TableView>
-                        <Label layoutX="23.0" layoutY="42.0" text="Envios">
+                        <Label layoutX="14.0" layoutY="37.0" text="Productos">
                            <font>
-                              <Font size="14.0" />
+                              <Font size="16.0" />
                            </font>
                         </Label>
                         <TitledPane animated="false" collapsible="false" layoutX="564.0" layoutY="68.0" prefHeight="145.0" prefWidth="163.0" text="Acciones">
@@ -144,6 +132,11 @@
                               </AnchorPane>
                           </content>
                         </TitledPane>
+                        <Button fx:id="buscar_envio_button" layoutX="406.0" layoutY="17.0" mnemonicParsing="false" onAction="#handleAgregarEnvio" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
                      </children>
                   </AnchorPane>
                </content>
