--- a/src/main/java/fxml/AgregarEnviosOrdenSalida.fxml
+++ b/src/main/java/fxml/AgregarEnviosOrdenSalida.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -15,8 +14,8 @@
       <TableView fx:id="TablaProductos" layoutX="24.0" layoutY="167.0" prefHeight="183.0" prefWidth="496.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="167.0">
          <columns>
             <TableColumn fx:id="ColumnaCodigo" prefWidth="57.0" text="Código" />
-            <TableColumn fx:id="ColumnaNombre" prefWidth="98.0" text="Nombre" />
-            <TableColumn fx:id="ColumnaDescripcion" prefWidth="133.0" text="Descripcion" />
+            <TableColumn fx:id="ColumnaNombre" prefWidth="98.0" text="Cliente" />
+            <TableColumn fx:id="ColumnaDescripcion" prefWidth="133.0" text="Pedido" />
             <TableColumn fx:id="ColumnaEstado" prefWidth="128.0" text="Estado" />
          </columns>
          <columnResizePolicy>
@@ -25,36 +24,30 @@
       </TableView>
       <AnchorPane layoutX="24.0" layoutY="12.0" prefHeight="99.0" prefWidth="502.0" AnchorPane.bottomAnchor="289.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="12.0">
          <children>
-            <Label layoutX="14.0" layoutY="42.0" text="Código:">
+            <Label layoutX="14.0" layoutY="42.0" text="Cliente">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="69.0" text="Nombre:">
+            <Label layoutX="14.0" layoutY="69.0" text="Cod.Envio">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="222.0" layoutY="42.0" text="Categoria">
+            <Label layoutX="222.0" layoutY="42.0" text="Cod. Pedido">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="222.0" layoutY="69.0" text="Estado">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="7.0" layoutY="-1.0" text="Producto">
+            <Label layoutX="7.0" layoutY="-1.0" text="Envios">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
             <TextField fx:id="BuscarCodigo" layoutX="100.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
             <TextField fx:id="BuscarNombre" layoutX="100.0" layoutY="67.0" prefHeight="20.0" prefWidth="111.0" />
-            <ComboBox fx:id="BuscarCategoria" layoutX="370.0" layoutY="40.0" prefHeight="25.0" prefWidth="126.0" />
             <Line endX="400.0" layoutX="100.0" layoutY="29.0" startX="-100.0" />
-            <ComboBox fx:id="BuscarEstado" layoutX="370.0" layoutY="73.0" prefHeight="25.0" prefWidth="126.0" />
+            <TextField fx:id="BuscarNombre1" layoutX="350.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
          </children>
       </AnchorPane>
       <Button fx:id="buscarProductoButtom" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
