--- a/src/main/java/fxml/Facturacion/Envios/Envios.fxml
+++ b/src/main/java/fxml/Facturacion/Envios/Envios.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.EnviosController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.EnviosController">
    <children>
       <AnchorPane layoutX="4.0" layoutY="6.0" prefHeight="572.0" prefWidth="250.0">
          <children>
@@ -108,10 +108,10 @@
                      <children>
                         <TableView fx:id="TablaProductos" prefHeight="277.0" prefWidth="555.0">
                            <columns>
-                              <TableColumn fx:id="codProdColumn" prefWidth="75.0" text="Código" />
-                              <TableColumn fx:id="nombreProdColumn" prefWidth="132.0" text="Nombre" />
-                              <TableColumn fx:id="subTotalProdColumna" prefWidth="95.0" text="Descripcion" />
-                              <TableColumn fx:id="cantProdColumn" prefWidth="51.0" text="Cantidad" />
+                              <TableColumn fx:id="columna_prod_cod" prefWidth="75.0" text="Código" />
+                              <TableColumn fx:id="columna_prod_nombre" prefWidth="132.0" text="Nombre" />
+                              <TableColumn fx:id="columna_prod_desc" prefWidth="95.0" text="Descripcion" />
+                              <TableColumn fx:id="columna_prod_cant" prefWidth="51.0" text="Cantidad" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
