--- a/src/main/java/fxml/Facturacion/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Facturacion/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -121,15 +122,21 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <Button fx:id="buscar_envio_button" layoutX="577.0" layoutY="22.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
+                        <Button fx:id="buscar_envio_button" layoutX="408.0" layoutY="14.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <Label layoutX="578.0" layoutY="71.0" text="Código Envio" />
-                        <Label layoutX="578.0" layoutY="149.0" text="Código Pedido" />
-                        <TextField fx:id="envio_buscar" layoutX="575.0" layoutY="100.0" />
-                        <TextField fx:id="pedido_buscar" layoutX="575.0" layoutY="173.0" />
+                        <Label layoutX="575.0" layoutY="14.0" text="Código Envio" />
+                        <Label layoutX="571.0" layoutY="73.0" text="Código Pedido" />
+                        <TextField fx:id="envio_buscar" layoutX="572.0" layoutY="37.0" />
+                        <TextField fx:id="pedido_buscar" layoutX="572.0" layoutY="98.0" />
+                        <Label layoutX="571.0" layoutY="139.0" text="Tipo de salida">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <ComboBox layoutX="571.0" layoutY="170.0" prefWidth="150.0" />
                      </children>
                   </AnchorPane>
                </content>
