--- a/src/main/java/fxml/Facturacion/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Facturacion/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -110,12 +110,18 @@
                      </font>
                   </Label>
                   <ComboBox fx:id="tipos" layoutX="90.0" layoutY="8.0" prefWidth="150.0" />
-                  <Label layoutX="268.0" layoutY="13.0" text="Descripción">
+                  <Label layoutX="407.0" layoutY="11.0" text="Descripción">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="pedido_buscar1" layoutX="348.0" layoutY="7.0" prefHeight="25.0" prefWidth="380.0" />
+                  <TextField fx:id="descripcion_envio" layoutX="491.0" layoutY="7.0" prefHeight="25.0" prefWidth="237.0" />
+                  <Label layoutX="252.0" layoutY="12.0" text="Código">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="codigo_salida" layoutX="305.0" layoutY="10.0" prefHeight="25.0" prefWidth="87.0" />
                </children>
             </AnchorPane>
             <TitledPane animated="false" collapsible="false" layoutX="1.0" layoutY="61.0" prefHeight="192.0" prefWidth="737.0" text="Informacion del envio">
